# emotion-server

./: .env  Cargo.toml  compose.yml
migrations/: 20240827075521_create.down.sql  20240827075521_create.up.sql
server/: Cargo.toml  Dockerfile
server/src/: main.rs
src/: api.rs  main.rs
src/api/: hello.rs  pnnx.rs  user.rs
