[package]
name = "emotion-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.1", features = ["postgres", "chrono", "runtime-tokio"] }
axum = { version = "0.7.5" }
serde = "1.0.209"
tokio = { version = "1.39.3", features = ["full"] }
anyhow = "1.0.86"
chrono = "0.4.38"
